kubernetes/karma_api_service.yml
apiVersion: v1
kind: Service
metadata:
  name: karma_api_service
  labels:
    app: karma_api
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: karma_api
