kubernetes/karma_db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: karma_db
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: karma_db
