kubernetes/karma_api_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma_api_ingress
spec:
  defaultBackend:
    service:
      name: karma_api_service
      port:
        number: 8000
